@@ -188,7 +188,7 @@ void *wxGetSingleChoiceData( const wxString& message,
     return res;
 }
 
-size_t wxGetMultipleChoices(wxArrayInt& selections,
+int wxGetSelectedChoices(wxArrayInt& selections,
                             const wxString& message,
                             const wxString& caption,
                             int n, const wxString *choices,
@@ -203,12 +203,57 @@ size_t wxGetMultipleChoices(wxArrayInt& selections,
     // deselects the first item which is selected by default
     dialog.SetSelections(selections);
 
-    if ( dialog.ShowModal() == wxID_OK )
-        selections = dialog.GetSelections();
-    else
-        selections.Empty();
+    if ( dialog.ShowModal() != wxID_OK )
+    {
+        // NB: intentionally do not clear the selections array here, the caller
+        //     might want to preserve its original contents if the dialog was
+        //     cancelled
+        return -1;
+    }
 
+    selections = dialog.GetSelections();
     return selections.GetCount();
+}
+
+int wxGetSelectedChoices(wxArrayInt& selections,
+                            const wxString& message,
+                            const wxString& caption,
+                            const wxArrayString& aChoices,
+                            wxWindow *parent,
+                            int x, int y,
+                            bool centre,
+                            int width, int height)
+{
+    wxString *choices;
+    int n = ConvertWXArrayToC(aChoices, &choices);
+    int res = wxGetSelectedChoices(selections, message, caption,
+                                      n, choices, parent,
+                                      x, y, centre, width, height);
+    delete [] choices;
+
+    return res;
+}
+
+#if WXWIN_COMPATIBILITY_2_8
+size_t wxGetMultipleChoices(wxArrayInt& selections,
+                            const wxString& message,
+                            const wxString& caption,
+                            int n, const wxString *choices,
+                            wxWindow *parent,
+                            int x, int y,
+                            bool centre,
+                            int width, int height)
+{
+    int rc = wxGetSelectedChoices(selections, message, caption,
+                                  n, choices,
+                                  parent, x, y, centre, width, height);
+    if ( rc == -1 )
+    {
+        selections.clear();
+        return 0;
+    }
+
+    return rc;
 }
 
 size_t wxGetMultipleChoices(wxArrayInt& selections,
@@ -220,15 +265,18 @@ size_t wxGetMultipleChoices(wxArrayInt& selections,
                             bool centre,
                             int width, int height)
 {
-    wxString *choices;
-    int n = ConvertWXArrayToC(aChoices, &choices);
-    size_t res = wxGetMultipleChoices(selections, message, caption,
-                                      n, choices, parent,
-                                      x, y, centre, width, height);
-    delete [] choices;
+    int rc = wxGetSelectedChoices(selections, message, caption,
+                                  aChoices,
+                                  parent, x, y, centre, width, height);
+    if ( rc == -1 )
+    {
+        selections.clear();
+        return 0;
+    }
 
-    return res;
+    return rc;
 }
+#endif // WXWIN_COMPATIBILITY_2_8
 
 // ----------------------------------------------------------------------------
 // wxAnyChoiceDialog
